[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Enemy/ComponentBehaviour.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Enemy/GunBehaviour.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Projectile/EnemySimpleProjectile.tscn" type="PackedScene" id=3]

[node name="GunBehaviour" instance=ExtResource( 1 )]
script = ExtResource( 2 )
projectile = ExtResource( 3 )
burst_timer = 0.15

[node name="Cooldown" type="Timer" parent="." index="0"]
one_shot = true

[node name="BurstTimer" type="Timer" parent="." index="1"]
one_shot = true

[node name="SpawnPoint" type="Position2D" parent="." index="2"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
